Added Pseudo selectors

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <input id="password" name="password" placeholder="Lösenord" type="password" required />
                         </div>
                         <div class="grid-item login-submit">
-                            <button type="submit">LOGGA IN</button>
+                            <button type="submit" class="button"><strong>LOGGA IN</strong></button>
                         </div>
                     </form>
                 </div>
@@ -85,8 +85,8 @@
                             <label for="sale">Jag vill få mejl när det är <strong>REA</strong>!</label>
                             <input id="sale" name="sale" type="checkbox" value="sale-yes" checked />
                         </fieldset>
-                        <div class="grid-item submit">
-                            <button type="submit">BESTÄLL</button>
+                        <div class="grid-item order-submit">
+                            <button type="submit" class="button"><strong>BESTÄLL</strong></button>
                         </div>
                     </form>
                 </div>
