--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
             <header>
                 <div class="container-top">
                     <div class="logo-brand">
-                        <img src="./images/logo.png" alt="" class="logo" />
+                        <img src="./images/logo.png" alt="Logotyp för Gröna Systrar" class="logo" />
                         <h1 class="brand">Gröna Systrar</h1>
                     </div>
-                    <form action="https://httpbin.org/anything" method="post" class="sub-grid" autocomplete="on">
+                    <form action="https://httpbin.org/anything" method="post" class="top-grid" autocomplete="on"
+                        id="member">
                         <div class="grid-item username">
+                            <label for="username" class="hidden">Användarnamn:</label>
                             <input id="username" name="username" placeholder="Användarnamn" type="text"
                                 autocomplete="on" required />
                         </div>
                         <div class="grid-item password">
+                            <label for="password" class="hidden">Lösenord:</label>
                             <input id="password" name="password" placeholder="Lösenord" type="password" required />
                         </div>
                         <div class="grid-item login-submit">
@@ -35,35 +38,36 @@
             <!-- Main -->
             <main>
                 <div class="container-mid">
-                    <h3 class="info">Dina uppgifter:</h3>
+                    <h2 class="info">Dina uppgifter:</h2>
                     <form action="https://httpbin.org/anything" method="post" class="main-grid" autocomplete="on">
                         <div class="grid-item first-name">
-                            <label for="first-name"></label>
-                            <input id="first-name" name="first-name" type="text" placeholder="Förnamn"
-                                autocomplete="on" />
+                            <label for="first-name" class="hidden">Förnamn:</label>
+                            <input id="first-name" name="first-name" type="text" placeholder="Förnamn" autocomplete="on"
+                                required />
                         </div>
                         <div class="grid-item last-name">
-                            <label for="last-name"></label>
-                            <input id="last-name" name="last-name" type="text" placeholder="Efternamn"
-                                autocomplete="on" />
+                            <label for="last-name" class="hidden">Efternamn:</label>
+                            <input id="last-name" name="last-name" type="text" placeholder="Efternamn" autocomplete="on"
+                                required />
                         </div>
                         <div class="grid-item adress">
-                            <label for="adress"></label>
-                            <input id="adress" name="adress" type="text" placeholder="Adress" autocomplete="on" />
+                            <label for="adress" class="hidden">Adress:</label>
+                            <input id="adress" name="adress" type="text" placeholder="Adress" autocomplete="on"
+                                required />
                         </div>
                         <div class="grid-item company">
-                            <label for="company"></label>
+                            <label for="company" class="hidden">Företag:</label>
                             <input id="company" name="company" type="text" placeholder="Företagsnamn (Valfritt)" />
                         </div>
                         <div class="grid-item postal-code">
-                            <label for="postal"></label>
-                            <input id="postal" name="postal" type="text" pattern="[0-9]{5}"
-                                placeholder="Postnummer (xxxxx)" autocomplete="on" />
+                            <label for="postal" class="hidden">Postnummer:</label>
+                            <input id="postal" name="postal" type="text" pattern="[0-9]{3}-[0-9]{2}"
+                                placeholder="Postnummer (xxx-xx)" autocomplete="on" required />
                         </div>
                         <div class="grid-item postal-city">
-                            <label for="postal-city"></label>
-                            <input id="postal-city" name="postal-city" type="text" placeholder="Stad"
-                                autocomplete="on" />
+                            <label for="postal-city" class="hidden">Stad:</label>
+                            <input id="postal-city" name="postal-city" type="text" placeholder="Stad" autocomplete="on"
+                                required />
                         </div>
                         <div class="grid-item country">
                             <h3 class="question">Bor du i Sverige?</h3>
@@ -73,8 +77,9 @@
                             <input id="other" name="country" type="radio" value="other" required />
                         </div>
                         <div class="grid-item email">
-                            <label for="email"></label>
-                            <input id="email" name="email" type="email" placeholder="Mejladress" autocomplete="on" />
+                            <label for="email" class="hidden">Mejladress:</label>
+                            <input id="email" name="email" type="email" placeholder="Mejladress" autocomplete="on"
+                                required />
                         </div>
                         <fieldset class="grid-item subscribe">
                             <legend>
@@ -95,9 +100,8 @@
             <footer class="container-bottom">
                 <p class="credit">&copy; Viktor Wiman 2023</p>
             </footer>
-            <!-- End of container-main -->
         </div>
-
+        <!-- End of container-main -->
     </body>
 
 </html>
